--- a/Source/Atrc/Atrc/FilmFilter/Box.ui
+++ b/Source/Atrc/Atrc/FilmFilter/Box.ui
@@ -15,11 +15,22 @@
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout">
    <item>
-    <widget class="QDoubleSpinBox" name="sidelen">
-     <property name="value">
-      <double>1.000000000000000</double>
-     </property>
-    </widget>
+    <layout class="QFormLayout" name="formLayout">
+     <item row="0" column="1">
+      <widget class="QDoubleSpinBox" name="sidelen">
+       <property name="value">
+        <double>1.000000000000000</double>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="0">
+      <widget class="QLabel" name="label">
+       <property name="text">
+        <string>sidelen</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
    </item>
   </layout>
  </widget>
