--- a/Source/Atrc/Atrc/FilmFilter/Box.ui
+++ b/Source/Atrc/Atrc/FilmFilter/Box.ui
@@ -13,9 +13,12 @@
   <property name="windowTitle">
    <string>BoxWidget</string>
   </property>
-  <layout class="QHBoxLayout" name="horizontalLayout">
+  <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <layout class="QFormLayout" name="formLayout">
+     <property name="formAlignment">
+      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+     </property>
      <item row="0" column="1">
       <widget class="QDoubleSpinBox" name="sidelen">
        <property name="value">
@@ -25,6 +28,12 @@
      </item>
      <item row="0" column="0">
       <widget class="QLabel" name="label">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
        <property name="text">
         <string>sidelen</string>
        </property>
