--- a/Source/Atrc/Atrc/Atrc.ui
+++ b/Source/Atrc/Atrc/Atrc.ui
@@ -64,7 +64,7 @@
    <property name="minimumSize">
     <size>
      <width>344</width>
-     <height>186</height>
+     <height>188</height>
     </size>
    </property>
    <property name="acceptDrops">
@@ -118,6 +118,9 @@
            </property>
            <property name="frameShape">
             <enum>QFrame::StyledPanel</enum>
+           </property>
+           <property name="frameShadow">
+            <enum>QFrame::Sunken</enum>
            </property>
            <property name="readOnly">
             <bool>true</bool>
@@ -200,13 +203,6 @@
           <widget class="QPushButton" name="AddErr">
            <property name="text">
             <string>AddError</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QPushButton" name="ChangeRight">
-           <property name="text">
-            <string>Change</string>
            </property>
           </widget>
          </item>
