--- a/Source/Atrc/Atrc/FilmFilter/Gaussian.ui
+++ b/Source/Atrc/Atrc/FilmFilter/Gaussian.ui
@@ -28,6 +28,12 @@
      </item>
      <item row="0" column="1">
       <widget class="QDoubleSpinBox" name="radiusSpinBox">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
        <property name="value">
         <double>0.500000000000000</double>
        </property>
@@ -42,6 +48,12 @@
      </item>
      <item row="1" column="1">
       <widget class="QDoubleSpinBox" name="alphaSpinBox">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
        <property name="value">
         <double>2.000000000000000</double>
        </property>
